unpackaged/main/default/objects/MonthlyAudits__x/MonthlyAudits__x.object-meta.xml
<CustomObject>
    <description>MonthlyAudits</description>
    <externalDataSource>LeasePlus</externalDataSource>
    <externalName>MonthlyAudits</externalName>
    <label>MonthlyAudits</label>
    <pluralLabel>MonthlyAudits</pluralLabel>
</CustomObject>