unpackaged/main/default/objects/MonthlyAudits__x/fields/AccountStatus__c.field-meta.xml
<CustomField>
    <fullName>AccountStatus__c</fullName>
    <description>AccountStatus</description>
    <externalDeveloperName>AccountStatus</externalDeveloperName>
    <label>AccountStatus</label>
    <length>128</length>
    <type>Text</type>
</CustomField>