unpackaged/main/default/objects/MonthlyAudits__x/fields/AverageDeposits__c.field-meta.xml
<CustomField>
    <fullName>AverageDeposits__c</fullName>
    <description>AverageDeposits</description>
    <externalDeveloperName>AverageDeposits</externalDeveloperName>
    <label>AverageDeposits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>