unpackaged/main/default/objects/MonthlyAudits__x/fields/BusinessCity__c.field-meta.xml
<CustomField>
    <fullName>BusinessCity__c</fullName>
    <description>BusinessCity</description>
    <externalDeveloperName>BusinessCity</externalDeveloperName>
    <label>BusinessCity</label>
    <length>128</length>
    <type>Text</type>
</CustomField>