unpackaged/main/default/objects/MonthlyAudits__x/fields/BusinessIndustryCode__c.field-meta.xml
<CustomField>
    <fullName>BusinessIndustryCode__c</fullName>
    <description>BusinessIndustryCode</description>
    <externalDeveloperName>BusinessIndustryCode</externalDeveloperName>
    <label>BusinessIndustryCode</label>
    <length>128</length>
    <type>Text</type>
</CustomField>