unpackaged/main/default/objects/MonthlyAudits__x/fields/BusinessIndustryName__c.field-meta.xml
<CustomField>
    <fullName>BusinessIndustryName__c</fullName>
    <description>BusinessIndustryName</description>
    <externalDeveloperName>BusinessIndustryName</externalDeveloperName>
    <label>BusinessIndustryName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>