unpackaged/main/default/objects/MonthlyAudits__x/fields/BusinessName__c.field-meta.xml
<CustomField>
    <fullName>BusinessName__c</fullName>
    <description>BusinessName</description>
    <externalDeveloperName>BusinessName</externalDeveloperName>
    <label>BusinessName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>