unpackaged/main/default/objects/MonthlyAudits__x/fields/BusinessState__c.field-meta.xml
<CustomField>
    <fullName>BusinessState__c</fullName>
    <description>BusinessState</description>
    <externalDeveloperName>BusinessState</externalDeveloperName>
    <label>BusinessState</label>
    <length>128</length>
    <type>Text</type>
</CustomField>