unpackaged/main/default/objects/MonthlyAudits__x/fields/BusinessStreetAddress__c.field-meta.xml
<CustomField>
    <fullName>BusinessStreetAddress__c</fullName>
    <description>BusinessStreetAddress</description>
    <externalDeveloperName>BusinessStreetAddress</externalDeveloperName>
    <label>BusinessStreetAddress</label>
    <length>128</length>
    <type>Text</type>
</CustomField>