unpackaged/main/default/objects/MonthlyAudits__x/fields/CollectionPeriodIsEligible__c.field-meta.xml
<CustomField>
    <fullName>CollectionPeriodIsEligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CollectionPeriodIsEligible</description>
    <externalDeveloperName>CollectionPeriodIsEligible</externalDeveloperName>
    <label>CollectionPeriodIsEligible</label>
    <type>Checkbox</type>
</CustomField>