unpackaged/main/default/objects/MonthlyAudits__x/fields/ContractPostDate__c.field-meta.xml
<CustomField>
    <fullName>ContractPostDate__c</fullName>
    <description>ContractPostDate</description>
    <externalDeveloperName>ContractPostDate</externalDeveloperName>
    <label>ContractPostDate</label>
    <type>DateTime</type>
</CustomField>