unpackaged/main/default/objects/MonthlyAudits__x/fields/CreditModelGrade__c.field-meta.xml
<CustomField>
    <fullName>CreditModelGrade__c</fullName>
    <description>CreditModelGrade</description>
    <externalDeveloperName>CreditModelGrade</externalDeveloperName>
    <label>CreditModelGrade</label>
    <length>128</length>
    <type>Text</type>
</CustomField>