unpackaged/main/default/objects/MonthlyAudits__x/fields/CreditModelScore__c.field-meta.xml
<CustomField>
    <fullName>CreditModelScore__c</fullName>
    <description>CreditModelScore</description>
    <externalDeveloperName>CreditModelScore</externalDeveloperName>
    <label>CreditModelScore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>