unpackaged/main/default/objects/MonthlyAudits__x/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <description>CustomerId</description>
    <externalDeveloperName>CustomerId</externalDeveloperName>
    <label>CustomerId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>