unpackaged/main/default/objects/MonthlyAudits__x/fields/DateEstablished__c.field-meta.xml
<CustomField>
    <fullName>DateEstablished__c</fullName>
    <description>DateEstablished</description>
    <externalDeveloperName>DateEstablished</externalDeveloperName>
    <label>DateEstablished</label>
    <type>DateTime</type>
</CustomField>