unpackaged/main/default/objects/MonthlyAudits__x/fields/DelinquentAmount__c.field-meta.xml
<CustomField>
    <fullName>DelinquentAmount__c</fullName>
    <description>DelinquentAmount</description>
    <externalDeveloperName>DelinquentAmount</externalDeveloperName>
    <label>DelinquentAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>