unpackaged/main/default/objects/MonthlyAudits__x/fields/DelinquentPayments__c.field-meta.xml
<CustomField>
    <fullName>DelinquentPayments__c</fullName>
    <description>DelinquentPayments</description>
    <externalDeveloperName>DelinquentPayments</externalDeveloperName>
    <label>DelinquentPayments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>