unpackaged/main/default/objects/MonthlyAudits__x/fields/FICOIsEligible__c.field-meta.xml
<CustomField>
    <fullName>FICOIsEligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FICOIsEligible</description>
    <externalDeveloperName>FICOIsEligible</externalDeveloperName>
    <label>FICOIsEligible</label>
    <type>Checkbox</type>
</CustomField>