unpackaged/main/default/objects/MonthlyAudits__x/fields/FundDate__c.field-meta.xml
<CustomField>
    <fullName>FundDate__c</fullName>
    <description>FundDate</description>
    <externalDeveloperName>FundDate</externalDeveloperName>
    <label>FundDate</label>
    <type>DateTime</type>
</CustomField>