unpackaged/main/default/objects/MonthlyAudits__x/fields/FundedPrincipalAmount__c.field-meta.xml
<CustomField>
    <fullName>FundedPrincipalAmount__c</fullName>
    <description>FundedPrincipalAmount</description>
    <externalDeveloperName>FundedPrincipalAmount</externalDeveloperName>
    <label>FundedPrincipalAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>