unpackaged/main/default/objects/MonthlyAudits__x/fields/IsACHPayment__c.field-meta.xml
<CustomField>
    <fullName>IsACHPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsACHPayment</description>
    <externalDeveloperName>IsACHPayment</externalDeveloperName>
    <label>IsACHPayment</label>
    <type>Checkbox</type>
</CustomField>