unpackaged/main/default/objects/MonthlyAudits__x/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsActive</description>
    <externalDeveloperName>IsActive</externalDeveloperName>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>