unpackaged/main/default/objects/MonthlyAudits__x/fields/IsAxos__c.field-meta.xml
<CustomField>
    <fullName>IsAxos__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsAxos</description>
    <externalDeveloperName>IsAxos</externalDeveloperName>
    <label>IsAxos</label>
    <type>Checkbox</type>
</CustomField>