unpackaged/main/default/objects/MonthlyAudits__x/fields/IsModified__c.field-meta.xml
<CustomField>
    <fullName>IsModified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsModified</description>
    <externalDeveloperName>IsModified</externalDeveloperName>
    <label>IsModified</label>
    <type>Checkbox</type>
</CustomField>