unpackaged/main/default/objects/MonthlyAudits__x/fields/IsRenewal__c.field-meta.xml
<CustomField>
    <fullName>IsRenewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsRenewal</description>
    <externalDeveloperName>IsRenewal</externalDeveloperName>
    <label>IsRenewal</label>
    <type>Checkbox</type>
</CustomField>