unpackaged/main/default/objects/MonthlyAudits__x/fields/LastPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>LastPaymentAmount__c</fullName>
    <description>LastPaymentAmount</description>
    <externalDeveloperName>LastPaymentAmount</externalDeveloperName>
    <label>LastPaymentAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>