unpackaged/main/default/objects/MonthlyAudits__x/fields/LastPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>LastPaymentDate__c</fullName>
    <description>LastPaymentDate</description>
    <externalDeveloperName>LastPaymentDate</externalDeveloperName>
    <label>LastPaymentDate</label>
    <type>DateTime</type>
</CustomField>