unpackaged/main/default/objects/MonthlyAudits__x/fields/LenderName__c.field-meta.xml
<CustomField>
    <fullName>LenderName__c</fullName>
    <description>LenderName</description>
    <externalDeveloperName>LenderName</externalDeveloperName>
    <label>LenderName</label>
    <length>128</length>
    <type>Text</type>
</CustomField>