unpackaged/main/default/objects/MonthlyAudits__x/fields/LoanIsEligible__c.field-meta.xml
<CustomField>
    <fullName>LoanIsEligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LoanIsEligible</description>
    <externalDeveloperName>LoanIsEligible</externalDeveloperName>
    <label>LoanIsEligible</label>
    <type>Checkbox</type>
</CustomField>