unpackaged/main/default/objects/MonthlyAudits__x/fields/LoanIsPerforming__c.field-meta.xml
<CustomField>
    <fullName>LoanIsPerforming__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LoanIsPerforming</description>
    <externalDeveloperName>LoanIsPerforming</externalDeveloperName>
    <label>LoanIsPerforming</label>
    <type>Checkbox</type>
</CustomField>