unpackaged/main/default/objects/MonthlyAudits__x/fields/LoanNumber__c.field-meta.xml
<CustomField>
    <fullName>LoanNumber__c</fullName>
    <description>LoanNumber</description>
    <externalDeveloperName>LoanNumber</externalDeveloperName>
    <label>LoanNumber</label>
    <length>128</length>
    <referenceTargetField>LP_Loan__c.LP_Loan_Number__c</referenceTargetField>
    <referenceTo>LP_Loan__c</referenceTo>
    <relationshipLabel>MonthlyAudits</relationshipLabel>
    <relationshipName>MonthlyAudits</relationshipName>
    <type>IndirectLookup</type>
</CustomField>