unpackaged/main/default/objects/MonthlyAudits__x/fields/NetFundedPrincipalAmount__c.field-meta.xml
<CustomField>
    <fullName>NetFundedPrincipalAmount__c</fullName>
    <description>NetFundedPrincipalAmount</description>
    <externalDeveloperName>NetFundedPrincipalAmount</externalDeveloperName>
    <label>NetFundedPrincipalAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>