unpackaged/main/default/objects/MonthlyAudits__x/fields/NFASCalculatedReceivableYield__c.field-meta.xml
<CustomField>
    <fullName>NFASCalculatedReceivableYield__c</fullName>
    <description>NFASCalculatedReceivableYield</description>
    <externalDeveloperName>NFASCalculatedReceivableYield</externalDeveloperName>
    <label>NFASCalculatedReceivableYield</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>