unpackaged/main/default/objects/MonthlyAudits__x/fields/PaidInterestAmount__c.field-meta.xml
<CustomField>
    <fullName>PaidInterestAmount__c</fullName>
    <description>PaidInterestAmount</description>
    <externalDeveloperName>PaidInterestAmount</externalDeveloperName>
    <label>PaidInterestAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>