unpackaged/main/default/objects/MonthlyAudits__x/fields/PaymentFrequency__c.field-meta.xml
<CustomField>
    <fullName>PaymentFrequency__c</fullName>
    <description>PaymentFrequency</description>
    <externalDeveloperName>PaymentFrequency</externalDeveloperName>
    <label>PaymentFrequency</label>
    <length>128</length>
    <type>Text</type>
</CustomField>