unpackaged/main/default/objects/MonthlyAudits__x/fields/PaymentStartDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentStartDate__c</fullName>
    <description>PaymentStartDate</description>
    <externalDeveloperName>PaymentStartDate</externalDeveloperName>
    <label>PaymentStartDate</label>
    <type>DateTime</type>
</CustomField>