unpackaged/main/default/objects/MonthlyAudits__x/fields/PayoffAmount__c.field-meta.xml
<CustomField>
    <fullName>PayoffAmount__c</fullName>
    <description>PayoffAmount</description>
    <externalDeveloperName>PayoffAmount</externalDeveloperName>
    <label>PayoffAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>