unpackaged/main/default/objects/MonthlyAudits__x/fields/RemainingPayments__c.field-meta.xml
<CustomField>
    <fullName>RemainingPayments__c</fullName>
    <description>RemainingPayments</description>
    <externalDeveloperName>RemainingPayments</externalDeveloperName>
    <label>RemainingPayments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>