unpackaged/main/default/objects/MonthlyAudits__x/fields/RemainingPrincipalAmount__c.field-meta.xml
<CustomField>
    <fullName>RemainingPrincipalAmount__c</fullName>
    <description>RemainingPrincipalAmount</description>
    <externalDeveloperName>RemainingPrincipalAmount</externalDeveloperName>
    <label>RemainingPrincipalAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>