unpackaged/main/default/objects/MonthlyAudits__x/fields/RemainingReceivableAmount__c.field-meta.xml
<CustomField>
    <fullName>RemainingReceivableAmount__c</fullName>
    <description>RemainingReceivableAmount</description>
    <externalDeveloperName>RemainingReceivableAmount</externalDeveloperName>
    <label>RemainingReceivableAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>