unpackaged/main/default/objects/MonthlyAudits__x/fields/RenewalCount__c.field-meta.xml
<CustomField>
    <fullName>RenewalCount__c</fullName>
    <description>RenewalCount</description>
    <externalDeveloperName>RenewalCount</externalDeveloperName>
    <label>RenewalCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>