unpackaged/main/default/objects/MonthlyAudits__x/fields/RepaymentFactor__c.field-meta.xml
<CustomField>
    <fullName>RepaymentFactor__c</fullName>
    <description>RepaymentFactor</description>
    <externalDeveloperName>RepaymentFactor</externalDeveloperName>
    <label>RepaymentFactor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>