unpackaged/main/default/objects/MonthlyAudits__x/fields/TerminationDate__c.field-meta.xml
<CustomField>
    <fullName>TerminationDate__c</fullName>
    <description>TerminationDate</description>
    <externalDeveloperName>TerminationDate</externalDeveloperName>
    <label>TerminationDate</label>
    <type>DateTime</type>
</CustomField>