unpackaged/main/default/objects/MonthlyAudits__x/fields/TerminationReasonCode__c.field-meta.xml
<CustomField>
    <fullName>TerminationReasonCode__c</fullName>
    <description>TerminationReasonCode</description>
    <externalDeveloperName>TerminationReasonCode</externalDeveloperName>
    <label>TerminationReasonCode</label>
    <length>128</length>
    <type>Text</type>
</CustomField>