unpackaged/main/default/objects/MonthlyAudits__x/fields/TermInMonths__c.field-meta.xml
<CustomField>
    <fullName>TermInMonths__c</fullName>
    <description>TermInMonths</description>
    <externalDeveloperName>TermInMonths</externalDeveloperName>
    <label>TermInMonths</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>