unpackaged/main/default/objects/MonthlyAudits__x/fields/TotalExpectedPayments__c.field-meta.xml
<CustomField>
    <fullName>TotalExpectedPayments__c</fullName>
    <description>TotalExpectedPayments</description>
    <externalDeveloperName>TotalExpectedPayments</externalDeveloperName>
    <label>TotalExpectedPayments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>