unpackaged/main/default/objects/MonthlyAudits__x/fields/TotalPaidAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalPaidAmount__c</fullName>
    <description>TotalPaidAmount</description>
    <externalDeveloperName>TotalPaidAmount</externalDeveloperName>
    <label>TotalPaidAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>