unpackaged/main/default/objects/MonthlyAudits__x/fields/TotalRepaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalRepaymentAmount__c</fullName>
    <description>TotalRepaymentAmount</description>
    <externalDeveloperName>TotalRepaymentAmount</externalDeveloperName>
    <label>TotalRepaymentAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>