unpackaged/main/default/objects/MonthlyAudits__x/fields/WeightedFICO__c.field-meta.xml
<CustomField>
    <fullName>WeightedFICO__c</fullName>
    <description>WeightedFICO</description>
    <externalDeveloperName>WeightedFICO</externalDeveloperName>
    <label>WeightedFICO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>