unpackaged/main/default/objects/MonthlyAudits__x/fields/WeightedNFASReceivableYield__c.field-meta.xml
<CustomField>
    <fullName>WeightedNFASReceivableYield__c</fullName>
    <description>WeightedNFASReceivableYield</description>
    <externalDeveloperName>WeightedNFASReceivableYield</externalDeveloperName>
    <label>WeightedNFASReceivableYield</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>