unpackaged/main/default/objects/MonthlyAudits__x/fields/WeightedPerformanceRatio__c.field-meta.xml
<CustomField>
    <fullName>WeightedPerformanceRatio__c</fullName>
    <description>WeightedPerformanceRatio</description>
    <externalDeveloperName>WeightedPerformanceRatio</externalDeveloperName>
    <label>WeightedPerformanceRatio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>