unpackaged/main/default/objects/MonthlyAudits__x/fields/YearsInBusiness__c.field-meta.xml
<CustomField>
    <fullName>YearsInBusiness__c</fullName>
    <description>YearsInBusiness</description>
    <externalDeveloperName>YearsInBusiness</externalDeveloperName>
    <label>YearsInBusiness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>