unpackaged/main/default/objects/MonthlyAudits__x/fields/YieldIsEligible__c.field-meta.xml
<CustomField>
    <fullName>YieldIsEligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>YieldIsEligible</description>
    <externalDeveloperName>YieldIsEligible</externalDeveloperName>
    <label>YieldIsEligible</label>
    <type>Checkbox</type>
</CustomField>